Update yml for this project

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_script:
 
 script:
   - echo "Building for PROD"
-  - ng build --prod --base-href=/qu-mart/
+  - ng build --prod --base-href=/udemy-angular-complete-guide/
 
 after_success:
   - echo "Build SUCCESS"
@@ -25,7 +25,7 @@ deploy:
   keep-history: true
   on:
     branch: master
-  local_dir: dist/qu-mart/  # Only copy the /dist/qu-mart contents (Angular > 6)
+  local_dir: dist/udemy-angular-complete-guide/  # Only copy the /dist/udemy-angular-complete-guide contents (Angular > 6)
 
 after_deploy:
   - echo "Deployed to GH Pages"
